force-app/main/default/objects/Timesheet__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Project_Resource__r.Project__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_ID</label>
    <type>Text</type>
</CustomField>