force-app/main/default/objects/Timesheet__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets (Worker)</relationshipLabel>
    <relationshipName>Timesheets1</relationshipName>
    <type>Lookup</type>
</CustomField>