force-app/main/default/objects/Timesheet__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <inlineHelpText>When system auto-created this timesheet</inlineHelpText>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>