force-app/main/default/objects/Timesheet__c/fields/Invoice_Line__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line</label>
    <referenceTo>InvoiceLine</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>