force-app/main/default/objects/Timesheet__c/fields/Is_Auto_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>System created vs manual</inlineHelpText>
    <label>Is Auto-Generated</label>
    <type>Checkbox</type>
</CustomField>