force-app/main/default/objects/Timesheet__c/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <formula>Project_Resource__r.Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project_ID</label>
    <type>Text</type>
</CustomField>