force-app/main/default/objects/Timesheet__c/fields/Project_Resource__c.field-meta.xml
<CustomField>
    <fullName>Project_Resource__c</fullName>
    <label>Project Resource/Timesheet Employee</label>
    <referenceTo>Project_Resource__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>