force-app/main/default/objects/Timesheet__c/fields/Reporting_Week__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Week__c</fullName>
    <formula>TEXT(YEAR(End_Date__c)) + &quot;-W&quot; + 
IF(
    CEILING( ( End_Date__c - DATE( YEAR( End_Date__c ), 1, 1 ) + 
    ( MOD( DATE( YEAR( End_Date__c ), 1, 1 ) - DATE( 1900, 1, 7 ), 7 ) + 1 ) ) / 7 ) &lt; 10,
    &quot;0&quot; + TEXT(CEILING( ( End_Date__c - DATE( YEAR( End_Date__c ), 1, 1 ) + 
    ( MOD( DATE( YEAR( End_Date__c ), 1, 1 ) - DATE( 1900, 1, 7 ), 7 ) + 1 ) ) / 7 )),
    TEXT(CEILING( ( End_Date__c - DATE( YEAR( End_Date__c ), 1, 1 ) + 
    ( MOD( DATE( YEAR( End_Date__c ), 1, 1 ) - DATE( 1900, 1, 7 ), 7 ) + 1 ) ) / 7 ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Week</label>
    <type>Text</type>
</CustomField>