force-app/main/default/objects/Timesheet__c/fields/Signature_On_Submission__c.field-meta.xml
<CustomField>
    <fullName>Signature_On_Submission__c</fullName>
    <label>Signature On Submission</label>
    <length>80</length>
    <type>Text</type>
</CustomField>