force-app/main/default/objects/Timesheet__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>