force-app/main/default/objects/Timesheet__c/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timesheet Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>