force-app/main/default/objects/Timesheet__c/fields/Timesheet_Status__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Status__c</fullName>
    <label>Timesheet Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>