force-app/main/default/objects/Timesheet__c/fields/Total_Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Amount__c</fullName>
    <label>Total Expense Amount.</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>