force-app/main/default/objects/Timesheet__c/fields/Total_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Hours__c</fullName>
    <label>Total Hours</label>
    <summarizedField>Time_Entry__c.Hours_Worked_Number_Format__c</summarizedField>
    <summaryForeignKey>Time_Entry__c.Timesheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>