force-app/main/default/objects/Timesheet__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weeks</label>
    <referenceTo>Weeks__c</referenceTo>
    <relationshipLabel>Timesheets</relationshipLabel>
    <relationshipName>Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>