force-app/main/default/objects/Timesheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Week__c</columns>
    <columns>Project_Resource__c</columns>
    <columns>Timesheet_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>